Simplified creation of unmodifiable list using List.of